feat: ✨ 1.21.10 port 🎉